force-app/main/default/objects/Pending_Message__c/Pending_Message__c.object-meta.xml
<CustomObject>
    <label>Pending Message</label>
    <nameField>
        <label>Pending Messages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pending Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>