force-app/main/default/objects/Pending_Message__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Displays the actual message against the response</description>
    <label>Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>