force-app/main/default/objects/Pending_Message__c/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <label>Messages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>