force-app/main/default/objects/Pending_Message__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Pending Messages</relationshipLabel>
    <relationshipName>Pending_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>